input message ok, add contact table and admin part for working with contacts process stage

--- a/app/src/main/res/layout/activity_send_sms.xml
+++ b/app/src/main/res/layout/activity_send_sms.xml
@@ -1,49 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_type"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_title_sms"
-        android:background="@drawable/appfunc_clear_selected"
-        android:layout_marginRight="@dimen/sms_listview_right"
-        android:text="@string/input_message"
-        android:textSize="@dimen/small_size_text"
-        android:textAlignment="center"/>
-
-    <ListView
-        android:id="@+id/list_items"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/folderopenback"
-        android:layout_marginRight="@dimen/sms_listview_right"
-        android:layout_marginTop="@dimen/sms_listview_top"
-        android:padding="@dimen/activity_horizontal_margin"/>
+        android:orientation="vertical">
+       <EditText
+           android:id="@+id/edit_number"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent" />
 
+    </LinearLayout>
     <ImageButton
-        android:id="@+id/button_change_type"
+        android:id="@+id/button_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/apndroid"
+        android:src="@drawable/handcentsms"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@null"
-        android:onClick="onClickChangeType"/>
-
+        android:onClick="onClickContact"/>
     <ImageButton
         android:id="@+id/button_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:src="@drawable/handcentsms"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@null"
         android:onClick="onClickSend"/>
 
