admin contact add, add contact headers on input message, enabled system navigation panel (for first click focus on all activity)

--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -38,7 +38,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:background="@null"
-            android:src="@drawable/gocontacts"/>
+            android:src="@drawable/gocontacts"
+            android:onClick="onClickContacts"/>
 
         <ImageButton
             android:layout_width="wrap_content"
