--- a/app/src/main/res/layout/activity_admin_contact.xml
+++ b/app/src/main/res/layout/activity_admin_contact.xml
@@ -1,7 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginRight="@dimen/activity_horizontal_margin_for_back_button">
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/folderopenback"
+            android:layout_weight="2"
+            android:padding="@dimen/admin_horizontal_padding">
+        </ListView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/folderopenback"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_marginRight="@dimen/activity_horizontal_margin">
+
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/appfunc_clear_selected"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:hint="@string/admin_contact_name"
+                android:gravity="center"
+                android:maxLines="1"
+                android:inputType="text" />
+            <EditText
+                android:id="@+id/edit_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/appfunc_clear_selected"
+                android:hint="@string/admin_contact_number"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:inputType="phone"
+                android:maxLines="1" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageButton
+                    android:id="@+id/button_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:layout_toLeftOf="@+id/button_delete"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/d_add"
+                    android:background="@null"
+                    android:onClick="onClickSave"/>
+                <ImageButton
+                    android:id="@+id/button_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/systemappremover"
+                    android:background="@null"
+                    android:onClick="onClickDelete"/>
+                <ImageButton
+                    android:id="@+id/button_to_sms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/button_delete"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:src="@drawable/messaging2"
+                    android:background="@null"
+                    android:onClick="onClickToSms"/>
+            </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_back"
@@ -12,4 +90,4 @@
         android:layout_centerInParent="true"
         android:onClick="onClickBack"/>
 
-</LinearLayout>
+</RelativeLayout>
