--- a/app/src/main/res/layout/activity_admin_list.xml
+++ b/app/src/main/res/layout/activity_admin_list.xml
@@ -141,6 +141,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/folderopenback"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:orientation="vertical">
             <RelativeLayout
                 android:layout_width="match_parent"
