--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -10,18 +10,32 @@
         android:layout_height="@dimen/height_title_sms"
         android:background="@drawable/appfunc_clear_selected"
         android:layout_marginRight="@dimen/sms_listview_right"
+        android:layout_marginTop="@dimen/activity_vertical_margin_small"
         android:text="@string/input_message"
         android:textSize="@dimen/small_size_text"
         android:textAlignment="center"/>
 
-    <ListView
-        android:id="@+id/list_items"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/folderopenback"
+        android:orientation="horizontal"
         android:layout_marginRight="@dimen/sms_listview_right"
-        android:layout_marginTop="@dimen/sms_listview_top"
-        android:padding="@dimen/activity_horizontal_margin"/>
+        android:layout_marginTop="@dimen/sms_listview_top">
+        <ListView
+            android:id="@+id/list_contact"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/folderopenback"
+            android:padding="@dimen/activity_horizontal_margin"/>
+        <ListView
+            android:id="@+id/list_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/folderopenback"
+            android:padding="@dimen/activity_horizontal_margin"/>
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/button_change_type"
