--- a/app/src/main/res/layout/activity_send_sms.xml
+++ b/app/src/main/res/layout/activity_send_sms.xml
@@ -6,35 +6,47 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-       <EditText
-           android:id="@+id/edit_number"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent" />
-
+        android:orientation="horizontal"
+        android:layout_marginRight="@dimen/sms_listview_right">
+        <ListView
+            android:id="@+id/list_contact"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/folderopenback"
+            android:padding="@dimen/activity_horizontal_margin"/>
+        <EditText
+            android:id="@+id/edit_message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="@string/sms_hint_message"
+            android:textAlignment="center"
+            android:background="@drawable/folderopenback"/>
     </LinearLayout>
-    <ImageButton
-        android:id="@+id/button_contact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/handcentsms"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@null"
-        android:onClick="onClickContact"/>
+
     <ImageButton
         android:id="@+id/button_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/handcentsms"
+        android:src="@drawable/email"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@null"
         android:onClick="onClickSend"/>
+    <ImageButton
+        android:id="@+id/button_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/handcentsms"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="@null"
+        android:onClick="onClickClear"/>
 
     <Button
         android:id="@+id/button_back"
