--- a/app/src/main/res/layout/activity_osmmaps.xml
+++ b/app/src/main/res/layout/activity_osmmaps.xml
@@ -12,6 +12,7 @@
         android:background="@color/black"
         android:textColor="@color/text"
         android:textSize="@dimen/small_size_text"
+        android:textAlignment="center"
         android:text="@string/maps_coordiantes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
