--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,49 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sedgw.pipboy_v11.MainActivity">
+    <TextView
+        android:id="@+id/time_text"
+        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="@dimen/medium_size_text"
+        android:layout_centerInParent="true"/>
     <!-- Main screen -->
     <LinearLayout
+        android:id="@+id/main_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true">
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/start_text"
+        android:text="@string/start_text"
+        android:textSize="@dimen/medium_size_text"
+        android:layout_above="@+id/start_button"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:textColor="@color/text"
+        android:background="@drawable/appfunc_rename"
+        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <ImageButton
+        android:id="@+id/start_button"
+        android:layout_width="@dimen/start_button_dp"
+        android:layout_height="@dimen/start_button_dp"
+        android:background="@null"
+        android:layout_centerInParent="true"
+        android:src="@drawable/aim"
+        android:scaleX="1.6"
+        android:scaleY="1.6"/>
 
     <!-- Bottom Menu -->
     <fragment
