--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.sedgw.pipboy_v11.MainActivity">
+    tools:context="com.example.sedgw.pipboy_v11.com.sedgw.pipboy_v11.MainActivity">
     <TextView
         android:id="@+id/time_text"
         android:layout_alignParentTop="true"
@@ -54,7 +54,7 @@
 
     <!-- Bottom Menu -->
     <fragment
-        android:name="com.example.sedgw.pipboy_v11.Fragment_Menu"
+        android:name="com.sedg.pipboy_v11.Fragment_Menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
