add all dbview activity

--- a/app/src/main/res/layout/activity_DB_first.xml
+++ b/app/src/main/res/layout/activity_DB_first.xml
@@ -8,7 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <!-- edit and button "OK"-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,27 +32,28 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:onClick="onClickOK" />
+        <ImageButton
+            android:id="@+id/button_to_list"
+            android:src="@drawable/gtasks"
+            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:onClick="onClickToList" />
 
     </RelativeLayout>
 
-    <!-- keyboard -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textColor="@color/error"
-            android:background="@drawable/appfunc_clear_selected"
-            android:textSize="@dimen/medium_size_text"
-            android:textAlignment="center"/>
-    </LinearLayout>
-
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:layout_centerInParent="true"
+        android:onClick="onClickBack"/>
 
 </LinearLayout>
