--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         android:textColor="@color/black"
         android:textSize="@dimen/medium_size_text"
         android:layout_centerInParent="true"/>
+    <TextView
+        android:id="@+id/timer_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="00:00:00"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent="true"
+        android:textColor="@color/text"
+        android:textSize="@dimen/medium_size_text" />
     <!-- Main screen -->
     <LinearLayout
         android:id="@+id/main_layout"
@@ -50,7 +60,8 @@
         android:layout_centerInParent="true"
         android:src="@drawable/aim"
         android:scaleX="1.6"
-        android:scaleY="1.6"/>
+        android:scaleY="1.6"
+        android:onClick="onClickStart"/>
 
     <!-- Bottom Menu -->
     <fragment
