--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_small">8dp</dimen>
     <dimen name="big_size_text">80sp</dimen>
+    <dimen name="timer_size_text">140sp</dimen>
     <dimen name="medium_size_text">50sp</dimen>
     <dimen name="small_size_text">20sp</dimen>
     <dimen name="very_small_size_text">10sp</dimen>
@@ -21,5 +22,9 @@
     <dimen name="sms_listview_top">44dp</dimen>
     <dimen name="height_title_sms">36dp</dimen>
     <dimen name="start_button_dp">100dp</dimen>
+    <dimen name="heigth_radio_button">40dp</dimen>
+    <dimen name="dbview_margin_headers">84dp</dimen>
+    <dimen name="dbview_audio_button_hor">22dp</dimen>
+    <dimen name="dbview_audio_button_ver">12dp</dimen>
 
 </resources>
