--- a/app/src/main/res/layout/activity_admin_list.xml
+++ b/app/src/main/res/layout/activity_admin_list.xml
@@ -124,6 +124,7 @@
                 android:layout_below="@id/edit_name"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:visibility="invisible"
                 android:src="@drawable/messaging2"
                 android:background="@null"
                 android:onClick="onClickMessage"/>
