--- a/app/src/main/res/layout/activity_db_view_media.xml
+++ b/app/src/main/res/layout/activity_db_view_media.xml
@@ -39,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/activity_vertical_margin_small"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
