--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="big_size_text">80sp</dimen>
     <dimen name="timer_size_text">140sp</dimen>
     <dimen name="medium_size_text">50sp</dimen>
+    <dimen name="error_text_size">35sp</dimen>
     <dimen name="small_size_text">20sp</dimen>
     <dimen name="very_small_size_text">10sp</dimen>
     <dimen name="activity_admin_main_horizontal_margin">200dp</dimen>
