fix timer and settings

--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -33,6 +33,7 @@
             android:onClick="onClickSettings"/>
 
         <ImageButton
+            android:id="@+id/button_contacts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -47,7 +48,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:background="@null"
-            android:src="@drawable/settings"/>
+            android:src="@drawable/settings"
+            android:visibility="invisible"/>
 
     </RelativeLayout>
 
