--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,28 +27,20 @@
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
         android:textColor="@color/text"
-        android:textSize="@dimen/medium_size_text" />
-    <!-- Main screen -->
-    <LinearLayout
-        android:id="@+id/main_layout"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:textSize="@dimen/medium_size_text"
+        android:visibility="invisible"/>
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/start_text"
-        android:text="@string/start_text"
+    <EditText
+        android:id="@+id/edit_code"
+        android:hint="@string/enter_start_code_hint"
         android:textSize="@dimen/medium_size_text"
         android:layout_above="@+id/start_button"
         android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:textColor="@color/text"
-        android:background="@drawable/appfunc_rename"
+        android:background="@drawable/appfunc_clear_selected"
         android:textAlignment="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 
